@@ -1,3 +1,10 @@
+2005-02-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* shimbun/sb-cnet-jp.el: Changes to support orphaned groups.
+	(shimbun-cnet-jp-orphaned-group-list): New variable.
+	(shimbun-groups): Add the groups listed in the above variable.
+	(shimbun-headers): New method.
+
 2005-02-13  Tsuyoshi CHO  <cho@namazu.org>
 
 	* shimbun/sb-mailman.el (shimbun-mailman-headers): Change url enclosing
